[package]
name = "axum-session"
version = "0.1.0"
edition = "2021"

[dependencies]
async-redis-session = "0.2.2"
axum = "0.5.17"
axum-sessions = "0.3.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.37"

[dev-dependencies]
http = "0.2.8"
itertools = "0.10.5"
tower = { version = "0.4", features = ["util"] }
